# xui-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: audit.yml  clippy.yml  coverage.yml  linux.yml  macos.yml  rustfmt.yml  windows.yml
src/: api.rs  errors.rs  main.rs
tests/: api_tests.rs
